tiép tục hướng dẫn mapper