@@ -2,6 +2,7 @@ package com.cybersoft.bookshop_product.service.imp;
 
 import com.cybersoft.bookshop_product.dto.ProductDTO;
 import com.cybersoft.bookshop_product.entity.Product;
+import com.cybersoft.bookshop_product.mapper.ProductMapper;
 import com.cybersoft.bookshop_product.repository.ProductRepository;
 import com.cybersoft.bookshop_product.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,7 +11,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class ProductServiceImpl implements ProductService {
@@ -22,56 +23,14 @@ public class ProductServiceImpl implements ProductService {
         this.productRepository = productRepository;
     }
 
-    private ProductDTO mapToDTO(Product product) {
-        ProductDTO dto = new ProductDTO();
-        dto.setId(product.getId());
-        dto.setTitle(product.getTitle());
-        dto.setAuthor(product.getAuthor());
-        dto.setReview(product.getReview());
-        dto.setPrice(product.getPrice());
-     //   dto.setImages(product.getImages());
-        dto.setCreatedDate(product.getCreatedDate());
-        dto.setUpdatedDate(product.getUpdatedDate());
-        return dto;
-    }
-
-    private Product mapToEntity(ProductDTO dto) {
-        Product product = new Product();
-        product.setId(dto.getId());
-        product.setTitle(dto.getTitle());
-        product.setAuthor(dto.getAuthor());
-        product.setReview(dto.getReview());
-        product.setPrice(dto.getPrice());
-        //product.setImages(dto.getImages());
-        product.setCreatedDate(dto.getCreatedDate());
-        product.setUpdatedDate(dto.getUpdatedDate());
-        return product;
-    }
-
     @Override
     public ProductDTO createProduct(ProductDTO productDTO) {
-        Product product = mapToEntity(productDTO);
-        product.setCreatedDate(LocalDateTime.now());
-        product.setUpdatedDate(LocalDateTime.now());
-        return mapToDTO(productRepository.save(product));
+        return null;
     }
 
     @Override
     public ProductDTO updateProduct(String id, ProductDTO productDTO) {
-        Optional<Product> optionalProduct = productRepository.findById(id);
-        if (optionalProduct.isEmpty()) {
-            throw new RuntimeException("Product not found with id: " + id);
-        }
-
-        Product product = optionalProduct.get();
-        product.setTitle(productDTO.getTitle());
-        product.setAuthor(productDTO.getAuthor());
-        product.setReview(productDTO.getReview());
-        product.setPrice(productDTO.getPrice());
-        //product.setImages(productDTO.getImages());
-        product.setUpdatedDate(LocalDateTime.now());
-
-        return mapToDTO(productRepository.save(product));
+        return null;
     }
 
     @Override
@@ -81,15 +40,13 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public ProductDTO getProductById(String id) {
-        return productRepository.findById(id)
-                .map(this::mapToDTO)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+        return null;
     }
 
     @Override
     public List<ProductDTO> getAllProducts() {
         return productRepository.findAll().stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(ProductMapper::mapToDTO).toList();
+        // tự động ánh xạ mapToDTO luôn, cách viết ngắn gọn hơn ít spoiler code hơn,
     }
 }
